# datn-cli

./: README.md  install.ps1  install.sh  pyproject.toml
datn_cli/: __init__.py  __main__.py  compose.py  config.py  doctor.py  embed_detect.py  wizard.py
datn_cli/templates/: docker-compose.dist.yml.j2
