[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datn-cli"
version = "0.2.1"
description = "One-command distribution for the datn multi-agent assistant (hides docker compose)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ngoquan0904" }]
keywords = ["cli", "docker", "compose", "ai-assistant", "distribution"]

dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "jinja2>=3.1",
]

[project.scripts]
datn = "datn_cli.__main__:app"

[project.urls]
Homepage = "https://github.com/ngoquan0904/datn-cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["datn_cli*"]

[tool.setuptools.package-data]
datn_cli = ["templates/*.j2"]
